server/istio/test/cert.yaml
apiVersion: cert-manager.io/v1alpha3
kind: Certificate
metadata:
  name: ingress-cert
  namespace: jblog
spec:
  secretName: jblog-ingress-cert
  issuerRef:
    name: letsencrypt-prod
    kind: ClusterIssuer
  commonName: jonasburster.de
  dnsNames:
  - jonasburster.de
  - www.jonasburster.de
  acme:
    config:
    - http01:
        ingressClass: istio
      domains:
      - jonasburster.de
      - www.jonasburster.de
