server/istio/test/entry.yaml
# apiVersion: networking.istio.io/v1alpha3
# kind: ServiceEntry
# metadata:
#   name: svc-entry
#   namespace: jblog
# spec:
#   hosts:
#   - jonasburster.de
#   ports:
#   - number: 80
#     name: http
#     protocol: HTTP
#   location: MESH_EXTERNAL
#   resolution: DNS
