server/istio/test/secret.yaml
apiVersion: v1
data:
  ca.crt: ""
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUZhekNDQkZPZ0F3SUJBZ0lTQXhScmt4YkVqeHMxc3pNZDk1WVcwSnBwTUEwR0NTcUdTSWIzRFFFQkN3VUEKTUVveEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1TTXdJUVlEVlFRRApFeHBNWlhRbmN5QkZibU55ZVhCMElFRjFkR2h2Y21sMGVTQllNekFlRncweU1EQTNNekV3TkRFek5ERmFGdzB5Ck1ERXdNamt3TkRFek5ERmFNQm94R0RBV0JnTlZCQU1URDJwdmJtRnpZblZ5YzNSbGNpNWtaVENDQVNJd0RRWUoKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTDBkZ2F1U0oxeitabCtHOXBFb0VjKytpTlJLSDJUSQpVTGk1VVR6ZEJqdUFZN [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFb2dJQkFBS0NBUUVBdlIyQnE1SW5YUDVtWDRiMmtTZ1J6NzZJMUVvZlpNaFF1TGxSUE4wR080QmpwU0xLCk1QaGtPMFgzTytMcU82WnBRcU9iWnlVeThDM1hnUkU4Rk1sYUQvaWZMYlo3K0JjQjkrNVd6K0VucjhNeFkxTkgKRjNaZ2FnMi9nWnNhRGtSVzVCeWl2VEFqamtRRVNCUmxUdStpc29GRzA5K09UZmRWTFJaWVk3MWJ2TW5EZWdEaAptUmRHWld2Sk9hUzNjaGhocnhuSWdDcXFYbnRxOHlMT2hmODhTOFE2cHFGLzQreGF0VTVHQk9RdDZNL0ZqQlc3CnVjUVFYS3dmZnNJZ1ZBQ0VDOUdRZmtPTHNPY1cxejFoMWZkTThkU3dVWlliVy8vZHZnZTJhb05FT3E0a2RrTXgKYWxFRWU5dXQ3R [...]
kind: Secret
metadata:
  annotations:
    cert-manager.io/alt-names: jonasburster.de,www.jonasburster.de
    cert-manager.io/certificate-name: jblog-cert
    cert-manager.io/common-name: jonasburster.de
    cert-manager.io/ip-sans: ""
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod
    cert-manager.io/uri-sans: ""
  name: jblog-cert
  namespace: istio-system
  ownerReferences:
  - apiVersion: cert-manager.io/v1alpha2
    blockOwnerDeletion: true
    controller: true
    kind: Certificate
    name: jblog-cert
    uid: db6affd1-3957-4f9b-ace1-001d88d6244b
type: kubernetes.io/tls
