server/istio/test/vs copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katchblog
  namespace: katchblog
spec:
  hosts:
  - "katchblog.com"
  gateways:
  - gateway.jblog
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: katchblog
